## Process this file with autoconf to check your version of "autoconf"

# A C Norman.                                         April 2009

# This is intended to cause the system to verify versions of all the
# relevant tools.

AC_INIT([VERSIONTEST],[1.0])

# At some stage I need to decide just what version I do rely upon!
#AC_PREREQ(2.61)

AM_INIT_AUTOMAKE([1.9.0])

# end of "configver.ac"

