## Process this file with autoconf to check your version of "autoconf"

# A C Norman.                                         April 2009-14

# This is intended to cause the system to verify versions of all the
# relevant tools.

AC_INIT([VERSIONTEST],[1.0])

# At some stage I need to decide just what version I do rely upon!
# The settings indicated here appear to be sufficient and some versions that
# are earlier have failed for me.

AC_PREREQ(2.59)

AM_INIT_AUTOMAKE([1.8.3 foreign])

AC_CONFIG_FILES([Makefile])

# end of "configure.ac"

