## Process this file with autoconf to check your version of "autoconf"

# A C Norman.                                                 2009-16

# This is intended to cause the system to verify versions of all the
# relevant tools.

AC_INIT([VERSIONTEST],[1.1])

AC_PREREQ(2.61)

AM_INIT_AUTOMAKE([1.13 foreign])

LT_INIT

AC_CONFIG_MACRO_DIRS([m4])

AC_CONFIG_FILES([Makefile])

# end of "configure.ac"

